# halo-accumulation

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: build-pdf.yml  deploy-website.yml  lint.yml
benches/: acc.rs  bench.rs  h.rs
code/: Cargo.toml  README.md  flake.nix
code/benches/: acc.rs  bench.rs
code/src/: acc.rs  consts.rs  group.rs  lib.rs  main.rs  pcdl.rs
report/: .cspell.json  acc-schemes-paper.md  acc-schemes-paper.tex  acm-siggraph.csl  bibliography.bib  flake.nix  gruvbox.theme  handin.md  header.tex  report.md  report.tex
slides/: .cspell.json  flake.nix  header.tex  slides.md
src/: acc.rs  consts.rs  group.rs  lib.rs  main.rs  pcdl.rs  pedersen.rs  points.txt
